<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SearchAc"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_go_euro_title"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_from_caption"/>

        <!-- From editor -->
        <AutoCompleteTextView
            android:id="@+id/activity_search_from_editor"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_locations_hint"/>

        <TextView
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_to_caption"/>

        <!-- To editor -->
        <AutoCompleteTextView
            android:id="@+id/activity_search_to_editor"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_locations_hint"/>

        <TextView
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_travel_date_caption"/>

        <!-- Date -->
        <EditText
            android:id="@+id/activity_search_travel_date_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="dd/mm/yyyy"
            android:editable="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/search"/>


</RelativeLayout>

